--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "expo": "40.0.1",
+    "proj4": "2.7.0",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-geolocation-service": "5.2.0",
